--- a/frontend/package.json
+++ b/frontend/package.json
@@ -40,6 +40,7 @@
     ]
   },
   "devDependencies": {
+    "jest-styled-components": "^7.0.3",
     "prettier": "2.2.1"
   },
   "proxy": "http://localhost:8080"
